name:                tapf-datastructures
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tapf-datastructures#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
-- extra-source-files:  README.md
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       unordered-containers,
                       ghc-vis
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tapf-datastructures
